Get basic GPIO working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,7 @@ esp-idf-svc = { version = "0.20", features = ["binstart"] }
 esp-idf-hal = "0.20"
 log = "0.4"
 mutex-trait = "0.2"
-esp32-hal = "0.3"
-esp32 = "0.11.0"
+dotenv_codegen = "0.15"
 
 [build-dependencies]
 embuild = "0.24"
